--- a/pythonmodels/templates/pythonmodels/layout/master.html
+++ b/pythonmodels/templates/pythonmodels/layout/master.html
@@ -47,6 +47,7 @@
 <script src="https://code.highcharts.com/modules/heatmap.js"></script>
 
 {# Other js #}
+<script src="{% static 'pythonmodels/js/csrfAjax.js' %}"></script>
 {% block js %}{% endblock %}
 <script src="{% static 'pythonmodels/js/landing.js' %}"></script>
 
